Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95293

QCocoaAccessibilityElement incorrect selector for "enabled": should be isAccessibilityEnabled not accessibilityEnabledAttribute

XMLWordPrintable

    • macOS
    • fe1085e9aebd3b669a18bd889fc007b1fc1c1e5d (qt/qtbase/dev) c0acb7b9577515cb455c1604a4a6a8ad15b462c7 (qt/qtbase/6.1) a7a6bb0873db7c11c178de4d98ee0f505b2dd621 (qt/qtbase/6.2) dfcfe775009eadf051c5e0663bf496ebdc48d05b (qt/tqtc-qtbase/5.15)

      Minor fix: now that QCocoaAccessibilityElement moved away from the deprecated methods of the NSAccessibility protocol, the name of the method returning the QAccessible.state().enabled property needs to be updated from accessibilityEnabledAttribute to -(BOOL)isAccessibilityEnabled:

      https://developer.apple.com/documentation/appkit/nsaccessibility/1535024-accessibilityenabled?language=objc

        For Gerrit Dashboard: QTBUG-95293
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            cosminp Cosmin Pancratov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes