Update deprecated NSAccessibility method

accessibilityEnabledAttribute is replaced with isAccessibilityEnabled.

https://developer.apple.com/documentation/appkit/nsaccessibility/1535024-accessibilityenabled?language=objc

Fixes: QTBUG-95293
Change-Id: Ie88fa61ad97d6c77dcec15e63a73f64c90011497
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit fe1085e9aebd3b669a18bd889fc007b1fc1c1e5d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>